--- a/arbol.html
+++ b/arbol.html
@@ -51,7 +51,7 @@
 <body>
   <div class="mensaje">
     <p>Para el amor de mi vida:</p>
-    <p>Si pudiera elegir un lugar seguro, sería a tu lado. Cuanto más tiempo estoy contigo, más te amo.</p>
+    <p>Si pudiera elegir un lugar seguro, sería a tu lado. Cuanto más tiempo estoy contigo, más te amo.❤️</p>
     <canvas id="canvas"></canvas>
     <p>Mi amor por ti comenzó hace...</p>
     <div id="timer"></div>
